crates/libs/frieze/tests/ui/maybe_of_option.stderr
error: frieze: Maybe<Option<T>> is ambiguous; nullability is doubly defined. Use Maybe<T> alone.
 --> tests/ui/maybe_of_option.rs:5:8
  |
5 |     x: Maybe<Option<String>>,
  |        ^^^^^^^^^^^^^^^^^^^^^
