crates/libs/frieze/tests/ui/maybe_of_option.rs
use frieze::{Maybe, Schema};

#[derive(Schema)]
struct S {
    x: Maybe<Option<String>>,
}

fn main() {}
